# zk_hashcash

./: Cargo.toml  README.md
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml
host/src/: main.rs  nonce.rs
lib/: Cargo.toml
lib/src/: lib.rs  public_values.rs
