[workspace]
members = [
    "guest",
    "host",
    "lib",
]
resolver = "3"

[workspace.dependencies]
clap = "4.5.3"
env_logger = "0.11.8"
hashcash-lib = { path = "lib" }
hex = "0.4.3"
log = "0.4.29"
rand = "0.9.2"
num_cpus = "1.17.0"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
sha3 = "0.10.8"
sp1-sdk = "6.0.2"
sp1-zkvm = "6.0.2"
tokio = "1.50.0"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-6.0.0" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-6.0.0" }
