[package]
name = "hashcash-host"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
hashcash-lib = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sp1-sdk = { workspace = true }

[build-dependencies]
sp1-build = "5.2.3"
